@@ -4,9 +4,9 @@ using InplaceOps
 using KUnet
 # ?? @everywhere using KUnet
 
-typealias Fmat Matrix{Int8}
+typealias Features Matrix{Int8}
 type Sentence form; lemma; cpostag; postag; head; deprel; wvec; Sentence()=new(); end
-typealias Corpus Vector{Sentence}
+typealias Corpus AbstractVector{Sentence}
 wdim(s)=size(s.wvec,1)
 wcnt(s)=size(s.wvec,2)
 
